# ModbusConfig

./: .gitignore  CMakeLists.txt  ModbusFrontend.html  README.md  app.manifest  modbusconfig.exe.manifest  resources.rc
MB/include/: crc.hpp  modbusUtils.hpp
MB/src/: CMakeLists.txt  crc.cpp
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/api/: ConsoleJsonApi.cpp  ConsoleJsonApi.h
core/application/: ModbusApplicationService.cpp  ModbusApplicationService.h
core/protocol/: ModbusProtocol.h  ModbusProtocolService.cpp  ModbusProtocolService.h
core/transport/: IModbusTransport.h
domain/: CMakeLists.txt  TransportType.cpp  TransportType.h
infrastructure/: CMakeLists.txt
infrastructure/transport/: InMemoryModbusTransport.cpp  InMemoryModbusTransport.h  MazurelModbusTransport.cpp  MazurelModbusTransport.h
layers/api/: api_layer.cpp  api_layer.h
layers/application/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  application_layer.cpp  application_layer.h
layers/protocol/: IModbusCodec.h  ModbusTypes.h  protocol_layer.cpp  protocol_layer.h
layers/transport/: ITransport.h  transport_layer.cpp  transport_layer.h
